k8s/main-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: currency-converter
  labels:
    app: main-service
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: main-service
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
